Features added Student Directory View Student Individual Profile View Communication Tools:     Log communications manually     Trigger follow-up email Insights & Filters:     Quick filters     Display summary stats
